[tool.poetry]
name = "openbb-tushare"
version = "0.0.1"
description = "OpenBB extension for Tushare"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tushare" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
openbb-core = { version = "^1.4.7" }
tushare = "^1.4.21"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_tushare = "openbb_tushare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
openbb_tushare = "openbb_tushare.provider:provider"
